--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       align-items:center;
       text-align:left;
       padding: 18px;
+      margin: 40px auto;
       background-color: white;
     }
     footer img{
