--- a/heart.html
+++ b/heart.html
@@ -4,13 +4,14 @@
       src: url(font.otf);
   }
    h1{
+     margin:5px;
      font-family: myfont;
      font-size: 25px;
      text-align: center;
    }
   p{
     text-align: left;
-    
+    margin:5px;
   }
   img{
     width:95vw;
