--- a/railway.html
+++ b/railway.html
@@ -4,11 +4,13 @@
       src: url(font.otf);
   }
    h1{
+     margin:5px;
      font-family: myfont;
      font-size: 25px;
      text-align: center;
    }
   p{
+   margin:5px; 
     text-align: left;
     
   }
