--- a/travel.html
+++ b/travel.html
@@ -7,10 +7,11 @@
      font-family: myfont;
      font-size: 25px;
      text-align: center;
+     margin:5px;
    }
   p{
     text-align: left;
-    
+    margin:5px;
   }
   img{
     width:95vw;
