--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <header>
    <img src="nb2.png" />
 
-<button id="cbtn">Contact the Developer</button>
+<button id="cbtn" onclick="window.location.href='https://wa.me/919289479880'">Contact the Developer</button>
 </header>
 
 <div class="container">
