--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
       flex-direction: column;
       align-items:center;
       
-    }
+    } 
     p{
       padding:0px 10px;
     }
-    #railway, #travel, #human, #heart{
+    #flights, #railway, #travel, #human, #heart{
       font-size: 20px;
       font-family: myfont;
       font-weight: bold;
@@ -75,7 +75,7 @@
       border-radius: 3px;
       background-color: white;
     }
-    #railway:hover, #travel:hover, #human:hover, #heart:hover{
+    #flights:hover, #railway:hover, #travel:hover, #human:hover, #heart:hover{
       background-color: #e6e6e6;
     }
     footer{
@@ -128,6 +128,12 @@
 </div>
   <hr>
   <h1>Trending News</h1>
+
+  
+    <div class="container2">
+  <button id="flights" onclick="window.location.href='flights.html'">Flights Update</button>
+  <p>For the second day in a row over 100 flights have been delayed at Delhi's IGI Airport as the National Capital continues to witness dense fog.</p>
+    </div>
 
   
   <div class="container2">
