--- a/flights.html
+++ b/flights.html
@@ -24,28 +24,28 @@
 
 <h1>For the second day in a row over 100 flights have been delayed at Delhi's IGI Airport as the National Capital continues to witness dense fog.</h1>
 
-<img src="https://source.unsplash.com/random/?aeroplane in fog" />
+<img src="https://source.unsplash.com/random/?aeroplane-in-fog" />
 <h2>
 Introduction 
 </h2>
 
 <p>Dense fog is a common phenomenon in Delhi during the winter months, especially in the early morning hours. Fog reduces the visibility and affects the air, rail, and road traffic in the city. One of the most affected sectors is the aviation industry, as flights are often delayed or cancelled due to poor weather conditions. In this composition, we will discuss the impact of dense fog on the flight operations at Delhi airport, the causes and consequences of the fog, and the possible solutions to mitigate the problem.</p>
 
-<img src="https://source.unsplash.com/random/?fog at airport" />
+<img src="https://source.unsplash.com/random/?fog-at-airport" />
 <h2>
   Impact of dense fog on flight operations
 </h2>
 
 <p>The dense fog on Monday, December 25, 2023, caused a major disruption in the flight operations at Delhi airport. The visibility dropped to zero, forcing the pilots to use the CAT IIIB operations for takeoffs and landings. Several flights were either delayed or diverted to nearby airports as the foggy conditions persisted. Passengers faced inconvenience and frustration as they waited for hours at the airport or rescheduled their travel plans.</p>
 
-<img src="https://source.unsplash.com/random/?fog in the city" />
+<img src="https://source.unsplash.com/random/?fog-in-the-city" />
 <h2>
 Causes of dense fog 
 </h2>
 
 <p>The main cause of dense fog in Delhi is the combination of low temperature, high humidity, and calm winds. The temperature in Delhi dropped to 9.4 degrees Celsius on Monday, while the humidity was around 100 per cent. The winds were also very light, which prevented the dispersion of the fog. The fog formation was also aided by the high levels of pollution in the city, as the particulate matter and aerosols acted as condensation nuclei for the water vapour.</p>
 
-<img src="https://source.unsplash.com/random/?disappointed people at airport" />
+<img src="https://source.unsplash.com/random/?disappointed-people-at-airport" />
 <h2>
 Consequences of dense fog
 </h2>
@@ -56,7 +56,7 @@ Economic loss: The delay or cancellation of flights causes a huge economic loss 
 Health hazards: The exposure to the fog and the pollution can cause various health problems for the people, such as respiratory infections, asthma, allergies, eye irritation, and reduced immunity.
 Social inconvenience: The fog affects the daily life of the people, as they face difficulties in commuting, working, studying, and travelling.</p>
 
-<img src="https://source.unsplash.com/random/?gogreen poster" />
+<img src="https://source.unsplash.com/random/?gogreen-poster" />
 <h2>
 Possible solutions
 </h2>
