--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 <body>
 
   <header>
-     <img src="Picsart_23-12-29_12-16-54-908.png" alt="Newz-Bharat Logo" class="logo">
+     <img src="Picsart_23-12-29_12-20-47-845.jpg" alt="Newz-Bharat Logo" class="logo">
           <hr class="divider">
     <h1>Welcome to Newz-Bharat</h1>
     <p>Your Gateway to Concise, Unbiased News in India</p>
