--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 <div class="container">
   <button id="news">News</button>
   <button id="videos">Videos</button>
+  <button id="about-us" onclick="window.location.href='about.html'">About Us</button>
   
 </div>
   <hr>
