--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
       font-family: myfont;
     }
     .container2{
+      width: 90vw;
       text-align: left;
       border-radius: 10px;
       background-color: white;
       padding: 10px;
-      margin: 20px;
+      margin: 20px auto;
       float: left;
       flex-direction: column;
       align-items:center;
@@ -82,7 +83,7 @@
       border-radius: 10px;
       box-shadow: 0px 0px 10px 0.1px;
       width: 90%;
-      height: 35vh;
+      height: 250px;
       display:flex;
       flex-direction: column;
       justify-content:center;
