--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       justify-content:center;
       align-items:center;
     }
-    #news, #videos{
+    #news, #videos, #about-us{
       margin:50px 20px;
       height: 35px;
       width: 70px;
