--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     p{
       padding:0px 10px;
     }
-    #flights, #railway, #travel, #human, #heart{
+    #crime, #flights, #railway, #travel, #human, #heart{
       font-size: 20px;
       font-family: myfont;
       font-weight: bold;
@@ -75,7 +75,7 @@
       border-radius: 3px;
       background-color: white;
     }
-    #flights:hover, #railway:hover, #travel:hover, #human:hover, #heart:hover{
+   #crime:hover, #flights:hover, #railway:hover, #travel:hover, #human:hover, #heart:hover{
       background-color: #e6e6e6;
     }
     footer{
@@ -130,6 +130,12 @@
   <hr>
   <h1>Trending News</h1>
 
+
+      <div class="container2">
+  <button id="crime" onclick="window.location.href='crime.html'">Crime Update</button>
+  <p>Stabbed 50 times: Insta date gone wrong leads to Delhi murder.</p>
+      </div>
+  
   
     <div class="container2">
   <button id="flights" onclick="window.location.href='flights.html'">Flights Update</button>
