--- a/crime.html
+++ b/crime.html
@@ -21,7 +21,7 @@
 </style>
 <h1>Stabbed 50 times: Insta date gone wrong leads to Delhi murder</h1>
 
-<img src="https://source.unsplash.com/random/?knife-in-hand"/>
+<img src="https://source.unsplash.com/random/?knife"/>
 <p>According to the news report1, Arman Khan, an 18-year-old, is now in judicial custody as the prime suspect in a murder case in Bhagirathi Vihar, Delhi. Arman had met a woman on Instagram and had gone on a date with her on December 28, 2023. However, things took a violent turn when he found out that she was married and had a child. He felt betrayed and angry, and decided to take revenge on her.</p>
 
 <p>He allegedly stabbed her 50 times with a knife and then fled the scene, leaving her to die in a pool of blood. The police were alerted by the locals who heard her screams and found her body. They traced Arman through his Instagram profile and arrested him from his home in Noida. He confessed to his crime and said that he wanted to teach her a lesson for lying to him.</p>
