--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
   <footer>
      <img src="nb.png" />
     <p>Copyright © 2023 Newz Bharat. All rights reserved.</p>
-    <p>Developed by Kira Websteria with love &#9829</p>
+    <p>Developed by Kira Websteria</p>
+<a href="kirawebsteria.in">>Kira Websteria<</a>
   </footer>
   
 </body>
