--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
      <img src="nb.png" />
     <p>Copyright © 2023 Newz Bharat. All rights reserved.</p>
     <p>Developed by Kira Websteria</p>
-<a href="kirawebsteria.in">>Kira Websteria<</a>
+<a href="https://kirawebsteria.in">>Kira Websteria<</a>
   </footer>
   
 </body>
